# MediaForge

./: .gitignore  CMakeLists.txt  implementation_plan.md  task.md
docs/: README.md  refactor_plan_new.md  refactored_architecture.md  transcoder_refactor.md  walkthrough.md
src/: demuxer.cpp  demuxer.h  job_system.cpp  job_system.h  main.cpp  main_cli.cpp  muxer.cpp  muxer.h  transcoder.cpp  transcoder.h  video_decoder.cpp  video_decoder.h  video_encoder.cpp  video_encoder.h  video_player.cpp  video_player.h  video_splitter.cpp  video_splitter.h
src/node/: node_factory.h
test_data/: 泰罗奥特曼01_test.mkv
